<resources>
    <string name="app_name">Android_Assignment_Latest</string>
    <string name="action_settings">Settings</string>
    <string name="Silent">This is a sound icon that represent the silent mode</string>
    <string name="add_Movie">Add Movie</string>
    <string name="MovieTitle">Movie Title</string>
    <string name="Movie">Movie</string>
    <string name="Director">Director</string>
    <string name="Starring">Starring</string>
    <string name="Genre">Genre</string>
    <string name="RunTime">RunTime</string>
    <string name="Comments">Comments</string>
    <string name="movie_title">List of Movies</string>
    <string name="add_button">Add Movie  </string>
    <string name="Dark_Theme">Dark Theme</string>
    <string name="Light_Theme">Light Theme</string>
    <string name="save_data">Save Movie</string>
    <string name="input">Text Input</string>
    <string name="input2">Number Input</string>
    <string name="edit_Movie_Title">Edit Movie</string>
    <string name="edit_button">Edit Movie</string>
    <string name="delete_button">Delete Movie</string>
    <string name="go_rotten_tomatoes">Go To Rotten Tomatoes </string>
    <string name="Amazon">Go To Amazon Prime</string>
    <string name="IMDB">Go To IMDB</string>
</resources>
