<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:foreground="?selectableItemBackground">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9E9E9E" >

        <TextView
            android:id="@+id/addContactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/add_Movie"
            android:layout_marginLeft="135dp"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
             />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/MovieTitle" />

        <EditText
            android:id="@+id/MovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/input"
            android:paddingRight="@dimen/padding_5dp" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/padding_5dp"
            android:text="@string/Director" />

        <EditText
            android:id="@+id/Director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/input"
            android:paddingRight="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Starring" />

        <EditText
            android:id="@+id/Starring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/input"
            android:paddingRight="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Genre" />

        <EditText
            android:id="@+id/Genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/input"
            android:paddingRight="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/RunTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/RunTime" />

        <EditText
            android:id="@+id/RunTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/input2"
            android:paddingRight="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Comments" />

        <EditText
            android:id="@+id/Comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/input"
            android:paddingRight="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewContact"
            android:text="@string/save_data" />
    </TableRow>

</TableLayout>