<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Heading1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?selectableItemBackground"
    android:background="#FFFAFAFA"
    android:screenOrientation="portrait">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9E9E9E" >

        <TextView
            android:id="@+id/editMovieTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9E9E9E"
            android:padding="@dimen/padding_5dp"
            android:text="@string/edit_Movie_Title"
            android:layout_marginStart="125dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_span="2"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/MovieTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_5dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/MovieTitle" />

        <EditText
            android:id="@+id/MovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_5dp" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/DirectorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_5dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Director" />

        <EditText
            android:id="@+id/Director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_5dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Starring" />

        <EditText
            android:id="@+id/Starring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/GenreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_5dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Genre" />

        <EditText
            android:id="@+id/Genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/RunTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_5dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/RunTime" />

        <EditText
            android:id="@+id/RunTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <TextView
            android:id="@+id/CommentsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_5dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Comments" />

        <EditText
            android:id="@+id/Comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_5dp" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">

        <Button
            android:id="@+id/editButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editMovie"
            android:text="@string/edit_button" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="removeMovie"
            android:text="@string/delete_button" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp">
    <Button
        android:id="@+id/RottenTomatoes"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="Rotten"
        android:text="@string/go_rotten_tomatoes"/>
</TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_2dp">
        <Button
            android:id="@+id/amazon"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="amazon"
            android:text="@string/Amazon"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_5dp">
        <Button
            android:id="@+id/IMDB"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="imdb"
            android:text="@string/IMDB"/>
    </TableRow>

</TableLayout>